# ros2_pendulum

./: README.md
results/: test.xlsx
results/galactic/: example1_degrees.csv  example1_radians.csv  example2_degrees.csv  example2_radians.csv
results/kilted/: example1_degrees.csv  example2_degrees.csv
ws/: CMakeLists.txt  package.xml
ws/include/pendulum/: clock.h  pendulum.h  plotter.h  torque.h  utils.h
ws/launch/: example1.launch.py  example2.launch.py  pendulum.launch.py  q1.launch.py  q2.launch.py
ws/src/: clock.cpp  pendulum.cpp  plotter.cpp  torque.cpp
